# 3cucharadas

./: .env.example  .gitignore  .gitlab-ci.yml  404.html  Gemfile  HANDOFF_3CUCHARADAS_UV_AVALUO_IGVUST_2026-07-19.md  HANDOFF_UV_AVALUO_ANALISIS_2026-07-19.md  README.md  _config.yml  _config_github.yml  _headers  about.markdown  feed-dev-en.xml  feed-julia.xml  font_NF.sh  index.html  package-lock.json  package.json  robots.txt  tsconfig.catastro.json  vite.catastro.config.ts  vitest.catastro.config.ts
.github/: dependabot.yml
_authors/: cristian.md
_data/: authors.yml  brand.yml  feedly_news.json  navigation.yml  ui-text.yml
_drafts/: 2025-04-12-apertura.md  2025-08-11-prueba-webfonts-katex.md  2025-09-27-bayes_hiperparametros.md  2026-06-20-predios-inflados-v44-anclaje-calle.md  2026-07-17-catastro-sii-brecha-python-osm-en.md  2026-07-20-avaluo-vulnerabilidad-unidad-vecinal.md  2026-07-22-avaluo-vulnerabilidad-unidad-vecinal-en.md  2026-07-23-avaluo-vulnerabilidad-unidad-vecinal.md
difusion/: README.md  environment.lock.yml  environment.yml  pyproject.toml
difusion/config/: secrets.env.example
difusion/linkedin/: ai-quota-hud-carrusel.html  copy-linkedin.md
difusion/src/cucharadas_difusion/: __init__.py  cli.py  desktop.py  destinations.py  models.py  networks.py  posts.py  providers.py  storage.py  verification.py  web.py
difusion/src/cucharadas_difusion/static/: review.css  review.js
difusion/src/cucharadas_difusion/templates/: review.html
difusion/tests/: conftest.py  test_core.py  test_networks.py  test_verification.py  test_web_cli.py
(+1078 files in other folders)
